--- a/index.html
+++ b/index.html
@@ -23,21 +23,35 @@
     <!-- inizio main -->
     <main>
       <!-- prima sezione -->
-      <section>
+      <section class="greysec">
 
-      </section>
+
+      </section >
       <!-- seconda sezione -->
         <!-- tre colonne -->
-      <section>
+      <section id="offered-services">
+        <div class="card">
 
+        </div>
+        <div class="card center">
+
+        </div>
+        <div class="card">
+
+        </div>
       </section>
       <!-- terza sezione -->
         <!-- due colonne -->
-      <section>
+      <section id="find-level">
+        <div class="card-2">
 
+        </div>
+        <div class="card-2">
+
+        </div>
       </section>
       <!-- quarta sezione -->
-      <section>
+      <section class="greysec">
 
       </section>
 
