--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
   <body>
     <!-- inizio header -->
-    <header>
+    <header >
       <!-- navbar -->
-      <nav>
+
+      <nav class="centratura">
 
       </nav>
       <!-- jumbotron -->
@@ -23,13 +24,13 @@
     <!-- inizio main -->
     <main>
       <!-- prima sezione -->
-      <section class="greysec">
+      <section class="greysec centratura">
 
 
       </section >
       <!-- seconda sezione -->
         <!-- tre colonne -->
-      <section id="offered-services">
+      <section id="offered-services" class="centratura">
         <div class="card">
 
         </div>
@@ -42,7 +43,7 @@
       </section>
       <!-- terza sezione -->
         <!-- due colonne -->
-      <section id="find-level">
+      <section id="find-level" class="centratura">
         <div class="card-2">
 
         </div>
@@ -51,7 +52,7 @@
         </div>
       </section>
       <!-- quarta sezione -->
-      <section class="greysec">
+      <section class="greysec centratura">
 
       </section>
 
