add font + navbar + img jumbo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Fluentify</title>
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -12,7 +13,18 @@
       <!-- navbar -->
 
       <nav class="centratura">
-
+        <img src="img/fluentify-logo.svg" alt="logo">
+        <ul>
+          <li><a href="#">il metodo</a></li>
+          <li><a href="#">la tecnologia</a></li>
+          <li><a href="#">real-time english</a></li>
+          <li><a href="#">soluzioni aziendali</a></li>
+        </ul>
+        <div class="nav-right">
+          <div class="">DIVENTA UN TUTOR</div>
+          <button type="button" name="button">LOGIN</button>
+          <button type="button" name="button">STRUTTURA UN PIANO</button>
+        </div>
       </nav>
       <!-- jumbotron -->
       <div class="jumbo">
