--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
         </div>
       </nav>
       <!-- jumbotron -->
-      <div class="jumbo">
-
+      <div class="jumbo centratura-j">
+        <div class="jumbo-title">
+          <h1>Scegli l'inglese studiato per i professionisti</h1>
+          <button type="button" name="button">STRUTTURA UN PIANO</button>
+        </div>
       </div>
     </header>
     <!-- fine header -->
