--- a/index.html
+++ b/index.html
@@ -40,35 +40,56 @@
     <main>
       <!-- prima sezione -->
       <section class="greysec centratura">
-
-
+        <h2>Le scuole tradizionali di lingua non sono efficaci</h2>
+        <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione efficace e concreta</p>
       </section >
       <!-- seconda sezione -->
         <!-- tre colonne -->
       <section id="offered-services" class="centratura">
         <div class="card">
+          <img src="img/fluentify-piano.svg" alt="">
+          <div class="">
+            <h3>Piano formativo configurato cul proprio livello</h3>
+          </div>
+          <div class="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
 
         </div>
         <div class="card center">
-
+          <img src="img/fluentify-piano.svg" alt="">
+          <div class="">
+            <h3>Piano formativo configurato cul proprio livello</h3>
+          </div>
+          <div class="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
         </div>
         <div class="card">
-
-        </div>
+          <img src="img/fluentify-piano.svg" alt="">
+          <div class="">
+            <h3>Piano formativo configurato cul proprio livello</h3>
+          </div>
+          <div class="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
       </section>
+      <hr>
       <!-- terza sezione -->
         <!-- due colonne -->
       <section id="find-level" class="centratura">
         <div class="card-2">
-
+          <img src="img/fluentify-scopri.svg" alt="">
         </div>
         <div class="card-2">
-
+          <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <a href="#">scopri il nostro test di placement</a>
         </div>
       </section>
       <!-- quarta sezione -->
       <section class="greysec centratura">
-
+        
       </section>
 
     </main>
