--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- inizio main -->
     <main>
       <!-- prima sezione -->
-      <section class="greysec centratura">
+      <section class="centratura" id="greysec-top">
         <h2>Le scuole tradizionali di lingua non sono efficaci</h2>
         <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione efficace e concreta</p>
       </section >
@@ -49,7 +49,7 @@
         <div class="card">
           <img src="img/fluentify-piano.svg" alt="">
           <div class="">
-            <h3>Piano formativo configurato cul proprio livello</h3>
+            <h3>Piano formativo configurato sul proprio livello</h3>
           </div>
           <div class="">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -57,18 +57,18 @@
 
         </div>
         <div class="card center">
-          <img src="img/fluentify-piano.svg" alt="">
+          <img src="img/fluentify-monitora.svg" alt="">
           <div class="">
-            <h3>Piano formativo configurato cul proprio livello</h3>
+            <h3>Monitora constantemente il tuo progresso</h3>
           </div>
           <div class="">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
         <div class="card">
-          <img src="img/fluentify-piano.svg" alt="">
+          <img src="img/fluentify-affiancamento.svg" alt="">
           <div class="">
-            <h3>Piano formativo configurato cul proprio livello</h3>
+            <h3>Affiancamento costante del tuo tutor</h3>
           </div>
           <div class="">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -84,12 +84,12 @@
         <div class="card-2">
           <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a href="#">scopri il nostro test di placement</a>
+          <a href="#">Scopri il nostro test di placement</a>
         </div>
       </section>
       <!-- quarta sezione -->
       <section class="greysec centratura">
-        
+
       </section>
 
     </main>
