add last section columns + form

--- a/index.html
+++ b/index.html
@@ -88,8 +88,24 @@
         </div>
       </section>
       <!-- quarta sezione -->
-      <section class="greysec centratura">
+      <section class="centratura" id="greysec-bottom">
+        <div class="last-section-column">
+          Struttura un piano
+        </div>
+        <div class="last-section-column">
+          <span>Sono:</span>
+          <form>
+            <select id="gender" name="gender">
+            <option value="M">Maschio</option>
+            <option value="F">Femmina</option>
+            </select>
+        </form>
 
+        </div>
+        <div class="last-section-column">
+          <button type="button" name="button">VISUALIZZA IL TUO PIANO</button>
+          <button type="button" name="button">HELP</button>
+        </div>
       </section>
 
     </main>
