--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- inizio header -->
     <header >
       <!-- navbar -->
-
       <nav class="centratura">
         <img src="img/fluentify-logo.svg" alt="logo">
         <ul>
@@ -26,6 +25,7 @@
           <button  type="button" name="button">STRUTTURA UN PIANO</button>
         </div>
       </nav>
+
       <!-- jumbotron -->
       <div class="jumbo centratura-j">
         <div class="jumbo-title">
@@ -33,6 +33,7 @@
           <button type="button" name="button">STRUTTURA UN PIANO</button>
         </div>
       </div>
+
     </header>
     <!-- fine header -->
 
@@ -43,38 +44,35 @@
         <h2>Le scuole tradizionali di lingua non sono efficaci</h2>
         <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione efficace e concreta</p>
       </section >
+
       <!-- seconda sezione -->
         <!-- tre colonne -->
       <section id="offered-services" class="centratura">
         <div class="card">
           <img src="img/fluentify-piano.svg" alt="">
-          <div class="">
-            <h3>Piano formativo configurato sul proprio livello</h3>
-          </div>
-          <div class="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-
+          <h3>Piano formativo configurato sul proprio livello</h3>
+          <div class="divider"></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
+
         <div class="card center">
           <img src="img/fluentify-monitora.svg" alt="">
-          <div class="">
-            <h3>Monitora constantemente il tuo progresso</h3>
-          </div>
-          <div class="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+          <h3>Monitora constantemente il tuo progresso</h3>
+          <div class="divider"></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
+
         <div class="card">
           <img src="img/fluentify-affiancamento.svg" alt="">
-          <div class="">
-            <h3>Affiancamento costante del tuo tutor</h3>
-          </div>
-          <div class="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+          <h3>Affiancamento costante del tuo tutor</h3>
+          <div class="divider"></div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+
       </section>
+
       <hr>
+
       <!-- terza sezione -->
         <!-- due colonne -->
       <section id="find-level" class="centratura">
@@ -87,6 +85,7 @@
           <a href="#">Scopri il nostro test di placement</a>
         </div>
       </section>
+
       <!-- quarta sezione -->
       <section class="centratura" id="greysec-bottom">
         <div class="last-section-column">
@@ -95,18 +94,19 @@
         <div class="last-section-column">
           <span>Sono:</span>
           <form>
-            <select id="gender" name="gender" placeholder="Seleziona">
+            <select id="gender" name="gender">
             <option value="0">Seleziona</option>
             <option value="M">Maschio</option>
             <option value="F">Femmina</option>
             </select>
-        </form>
-
+          </form>
         </div>
+
         <div class="last-section-column">
           <button type="button" name="button">VISUALIZZA IL TUO PIANO</button>
           <button type="button" name="button">HELP</button>
         </div>
+
       </section>
 
     </main>
