--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="last-section-column">
           <h2>Struttura un piano</h2>
         </div>
-        <div class="last-section-column">
+        <div class="last-section-column select">
           <span>Sono:</span>
           <form>
             <select id="gender" name="gender">
@@ -103,8 +103,11 @@
         </div>
 
         <div class="last-section-column">
-          <button type="button" name="button">VISUALIZZA IL TUO PIANO</button>
-          <button type="button" name="button">HELP</button>
+          <div class="">
+            <button type="button" name="button">VISUALIZZA IL TUO PIANO</button>
+          </div>
+        <div class="">
+           <button type="button" name="button">HELP</button>
         </div>
 
       </section>
